problem with traveling design btm

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
+    <section class="container">
       <header>
         <p>
           <a href="./aboutme.html" target="_blank" rel="noopener noreferrer"
@@ -20,21 +20,26 @@
         </p>
       </header>
       <main>
-        <div class="flexitem left"></div>
-        <div class="lefttop">
-          <a href="./DESIGN.html" target="_blank" rel="noopener noreferrer"
-            >DESIGN</a
-          >
+        <div class="left">
+          <div class="leftbtm">
+            <a href="./DESIGN.html" target="_blank" rel="noopener noreferrer"
+              >DESIGN</a
+            >
+          </div>
         </div>
-        <div class="flexitem right"></div>
-        <div class="righttop"><a href="./WEBDEV.html" target="_blank" rel="noopener noreferrer"
-          >WEB DEV</a</div>
+        <div class="right">
+          <div class="rightbtm">
+            <a href="./WEBDEV.html" target="_blank" rel="noopener noreferrer"
+              >WEB DEV</a
+            >
+          </div>
+        </div>
       </main>
       <footer>
         <p>
           <a href="mailto:majamarek.design@gmail.com">CONTACT</a>
         </p>
       </footer>
-    </div>
+    </section>
   </body>
 </html>
