nav display doasn't work

--- a/index.html
+++ b/index.html
@@ -11,35 +11,52 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="container">
-      <header>
-        <p>
+    <header>
+      <nav class="nav">
+        <button class="nav-btn">
           <a href="./aboutme.html" target="_blank" rel="noopener noreferrer"
             >MAJA</a
           >
-        </p>
-      </header>
-      <main>
-        <div class="left">
-          <div class="leftbtm">
+        </button>
+        <ul class="nav-content">
+          <li class="list-item">
             <a href="./DESIGN.html" target="_blank" rel="noopener noreferrer"
-              >DESIGN</a
+              >design</a
             >
-          </div>
-        </div>
-        <div class="right">
-          <div class="rightbtm">
-            <a href="./WEBDEV.html" target="_blank" rel="noopener noreferrer"
-              >WEB DEV</a
+          </li>
+          <li class="list-item">
+            <a href="./web dev.html" target="_blank" rel="noopener noreferrer"
+              >web dev</a
             >
-          </div>
-        </div>
-      </main>
-      <footer>
-        <p>
-          <a href="mailto:majamarek.design@gmail.com">CONTACT</a>
-        </p>
-      </footer>
-    </section>
+          </li>
+          <li class="list-item">
+            <a href="./aboutme.html" target="_blank" rel="noopener noreferrer"
+              >about me</a
+            >
+          </li>
+          <li class="list-item">
+            <a href="./contact.html" target="_blank" rel="noopener noreferrer"
+              >contact</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="left">
+        <button class="nav-design-button">
+          <a href="./DESIGN.html" target="_blank" rel="noopener noreferrer"
+            >DESIGN</a
+          >
+        </button>
+      </div>
+      <div class="right">
+        <button class="nav-web-dev-button">
+          <a href="./WEBDEV.html" target="_blank" rel="noopener noreferrer"
+            >WEB DEV</a
+          >
+        </button>
+      </div>
+    </main>
   </body>
 </html>
