--- a/index.html
+++ b/index.html
@@ -8,52 +8,56 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
+      rel="stylesheet"
+    />
+    <link href="/your-path-to-fontawesome/css/all.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <script defer src="/./js/all.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <nav class="nav">
-        <button class="nav-btn">
-          <a href="./aboutme.html" target="_blank" rel="noopener noreferrer"
-            >MAJA</a
-          >
-        </button>
-        <ul class="nav-content">
-          <li class="list-item">
-            <a href="./DESIGN.html" target="_blank" rel="noopener noreferrer"
-              >design</a
+      <nav class="navbar">
+        <nav class="subnav">
+          <button class="subnav-btn">
+            <a href="./index.html"
+              ><i class="fas fa-brain fa-1x"></i>&nbsp; Majka</a
             >
-          </li>
-          <li class="list-item">
-            <a href="./web dev.html" target="_blank" rel="noopener noreferrer"
-              >web dev</a
-            >
-          </li>
-          <li class="list-item">
-            <a href="./aboutme.html" target="_blank" rel="noopener noreferrer"
-              >about me</a
-            >
-          </li>
-          <li class="list-item">
-            <a href="./contact.html" target="_blank" rel="noopener noreferrer"
-              >contact</a
-            >
-          </li>
-        </ul>
+          </button>
+          <ul class="subnav-content">
+            <li class="list-item">
+              <a href="./aboutme.html" target="_blank" rel="noopener noreferrer"
+                >about me</a
+              >
+            </li>
+            <li class="list-item">
+              <a href="./contact.html" target="_blank" rel="noopener noreferrer"
+                >contact</a
+              >
+            </li>
+          </ul>
+        </nav>
       </nav>
     </header>
-    <main>
+    <main class="nav-left-right">
       <div class="left">
         <button class="nav-design-button">
-          <a href="./DESIGN.html" target="_blank" rel="noopener noreferrer"
-            >DESIGN</a
+          <a href="./WEBDEV.html" target="_blank" rel="noopener noreferrer"
+            ><i class="fas fa-code fa-1x"></i>&nbsp; WEB DEV</a
           >
         </button>
       </div>
       <div class="right">
         <button class="nav-web-dev-button">
-          <a href="./WEBDEV.html" target="_blank" rel="noopener noreferrer"
-            >WEB DEV</a
+          <a href="./DESIGN.html" target="_blank" rel="noopener noreferrer"
+            ><i class="fas fa-palette fa-1x"></i>&nbsp; DESIGN</a
           >
         </button>
       </div>
