--- a/index.html
+++ b/index.html
@@ -20,27 +20,22 @@
       crossorigin="anonymous"
     />
     <script defer src="/./js/all.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header>
-      <nav class="navbar">
+      <nav class="topbar">
         <nav class="subnav">
-          <button class="subnav-btn">
-            <a href="./index.html"
-              ><i class="fas fa-brain fa-1x"></i>&nbsp; Majka</a
-            >
+          <button class="majka-btn">
+            <a class="i" href="#"><i class="fas fa-brain fa-1x"></i></a>
+            <a>Majka</a>
           </button>
-          <ul class="subnav-content">
+          <ul class="subnav-content about-me contact">
             <li class="list-item">
-              <a href="./aboutme.html" target="_blank" rel="noopener noreferrer"
-                >about me</a
-              >
+              <a href="./aboutme.html">about me</a>
             </li>
             <li class="list-item">
-              <a href="./contact.html" target="_blank" rel="noopener noreferrer"
-                >contact</a
-              >
+              <a href="./contact.html">contact</a>
             </li>
           </ul>
         </nav>
@@ -49,15 +44,15 @@
     <main class="nav-left-right">
       <div class="left">
         <button class="nav-design-button">
-          <a href="./WEBDEV.html" target="_blank" rel="noopener noreferrer"
-            ><i class="fas fa-code fa-1x"></i>&nbsp; WEB DEV</a
+          <a href="./WEBDEV.html"
+            ><i class="fas fa-code fa-1x"></i>&nbsp; web dev</a
           >
         </button>
       </div>
       <div class="right">
         <button class="nav-web-dev-button">
-          <a href="./DESIGN.html" target="_blank" rel="noopener noreferrer"
-            ><i class="fas fa-palette fa-1x"></i>&nbsp; DESIGN</a
+          <a href="./DESIGN.html"
+            ><i class="fas fa-palette fa-1x"></i>&nbsp; design</a
           >
         </button>
       </div>
