--- a/aboutme.html
+++ b/aboutme.html
@@ -45,21 +45,75 @@
         </nav>
       </nav>
     </header>
-    <main class="nav-left-right">
-      <div class="left">
-        <button class="nav-design-button">
-          <a href="./WEBDEV.html"
-            ><i class="fas fa-code fa-1x"></i>&nbsp; web dev</a
-          >
-        </button>
+    <section>
+      <button class="nav-design-button button-1">
+        <a href="./WEBDEV.html"
+          ><i class="fas fa-code fa-1x"></i>&nbsp; web dev</a
+        >
+      </button>
+      <button class="nav-web-dev-button button-2">
+        <a href="./DESIGN.html"
+          ><i class="fas fa-palette fa-1x"></i>&nbsp; design</a
+        >
+      </button>
+    </section>
+    <div class="about-me">
+      <hr />
+      <p class="work-ex">EDUCATION:</p>
+      <button type="button" class="collapsible">2003-2020</button>
+      <div class="content">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
       </div>
-      <div class="right">
-        <button class="nav-web-dev-button">
-          <a href="./DESIGN.html"
-            ><i class="fas fa-palette fa-1x"></i>&nbsp; design</a
-          >
-        </button>
+      <p class="work-ex">WORK EXPERIENCE:</p>
+      <button type="button" class="collapsible">2019</button>
+      <div class="content">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
       </div>
-    </main>
+      <button type="button" class="collapsible">2018</button>
+      <div class="content">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
+      </div>
+      <button type="button" class="collapsible">2017</button>
+      <div class="content">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat.
+        </p>
+      </div>
+
+      <script>
+        var coll = document.getElementsByClassName("collapsible");
+        var i;
+
+        for (i = 0; i < coll.length; i++) {
+          coll[i].addEventListener("click", function () {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.display === "block") {
+              content.style.display = "none";
+            } else {
+              content.style.display = "block";
+            }
+          });
+        }
+      </script>
+    </div>
   </body>
 </html>
