--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
         </nav>
       </nav>
     </header>
+    <section>
+      <button class="nav-design-button button-1">
+        <a href="./WEBDEV.html"
+          ><i class="fas fa-code fa-1x"></i>&nbsp; web dev</a
+        >
+      </button>
+      <button class="nav-web-dev-button button-2">
+        <a href="./DESIGN.html"
+          ><i class="fas fa-palette fa-1x"></i>&nbsp; design</a
+        >
+      </button>
+    </section>
     <main class="nav-left-right">
-      <div class="left">
-        <button class="nav-design-button">
-          <a href="./WEBDEV.html"
-            ><i class="fas fa-code fa-1x"></i>&nbsp; web dev</a
-          >
-        </button>
-      </div>
-      <div class="right">
-        <button class="nav-web-dev-button">
-          <a href="./DESIGN.html"
-            ><i class="fas fa-palette fa-1x"></i>&nbsp; design</a
-          >
-        </button>
-      </div>
+      <div class="left"></div>
+      <div class="right"></div>
     </main>
   </body>
 </html>
