--- a/contact.html
+++ b/contact.html
@@ -56,8 +56,8 @@
       </button>
     </section>
     <div class="contact-main">
-      <aside class="left"></aside>
-      <form action="POST">
+      <aside class="contact-left"></aside>
+      <form action="https://formspree.io/xvowvayw" method="POST">
         <fieldset>
           <legend>Get in contact</legend>
           <label for="name">Name:</label>
@@ -79,7 +79,7 @@
           <label for="mail">E-mail:</label>
           <input
             type="email"
-            name="mail"
+            name="replyto"
             id="mail"
             placeholder="john@gmail.com"
           />
@@ -94,10 +94,10 @@
             placeholder="write here something about your project"
           >
           </textarea>
-          <input class="submit" type="submit" value="submit" />
+          <input class="submit" type="submit" value="Send" />
         </fieldset>
       </form>
-      <aside class="right"></aside>
+      <aside class="contact-right"></aside>
     </div>
   </body>
 </html>
